test/files/neg/bug987.check
bug987.scala:15: error: the type intersection D with ScalaObject is malformed
 --- because ---
no common type instance of base types B[C], and B[D] exists.
class E extends D
        ^
bug987.scala:20: error: the type intersection D with ScalaObject is malformed
 --- because ---
no common type instance of base types B[C], and B[D] exists.
class F extends D
        ^
bug987.scala:25: error: the type intersection C with B[D] with ScalaObject is malformed
 --- because ---
no common type instance of base types B[D], and B[C] exists.
abstract class D extends C with B[D] {}
                 ^
three errors found
